<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_lock"
                android:layout_width="14dp"
                android:layout_height="14dp"/>
            <TextView
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_arrow_down"
                android:layout_width="14dp"
                android:layout_height="14dp"/>
        </LinearLayout>
        <ImageView
            android:layout_margin="16dp"
            android:src="@drawable/ic_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/numPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:text="@string/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/numPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:text="@string/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/numPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:text="@string/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/userName"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/job"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/id"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:text="@string/description"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <TextView
        android:background="@drawable/border"
        android:text="@string/editProfile"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/txtNew"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/txtNew"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/txtNew"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/txtNew"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:src="@drawable/ic_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <ImageView
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:src="@drawable/ic_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </LinearLayout>

</LinearLayout>